Adecuación de los servicios de embarcacion